ART 4.2
* Added use_api permission
* Better handle dates for MongoDB reports
* Effect show header in public user session setting
* Added Russian translation (thanks to Galina Seliverstova and Pavel Alexeev)
* Updated jasperreports

ART 4.1
* Added option not to run reports immediately when creating self service dashboards
* Modified specifying of date range picker options
* Fix for error when exporting report with parameters
* Fix for errors with sql scripts
* Fix for chart background colour not being effected
* Corrected reportengine dependency
* Fix for drilldown charts not using report show legend setting
* Added self service reports
* Added self_service_reports permission
* Downgraded mysql driver to 5.1.42

ART 4.0
* Fix for legends always off for charts in dashboards
* Allow querying from InfluxDB database
* Replaced synapticloop b2 api with jclouds. B2 destination bucket ids need to be replaced with bucket names.
* Fix for gridstack dashboard not showing properly inline in chrome
* Updated jdbc drivers and other libraries
* Requires Java 8

ART 3.11
* Allow for several public users
* Added Backblaze B2 destination type
* Enable use of masks for parameters

ART 3.10
* Provide edit report link from select parameters page
* Allow changing job owner
* Check upper case and lower case table names for cache resultset jobs
* Fix for parent parameters not being considered in drilldown reports
* Stop setting jasperreports excel export options
* Added snowflake jdbc driver
* Include daterange parameter template files in import/export
* Fix for error when using wildfly
* Removed report quick edit panel
* Allow specification of column widths for datatable report format of tabular reports
* Updated jclouds

ART 3.9
* Allow jTDS driver to use imageColumns option
* Enable edit of self service dashboards
* Use bootstrap select for chained parameters
* Allow running of an update statement before/after a job runs