@@ -309,6 +309,7 @@ INSERT INTO ART_REPORT_TYPES VALUES (158,'ReportEngine');
 INSERT INTO ART_REPORT_TYPES VALUES (159,'ReportEngine: File');
 INSERT INTO ART_REPORT_TYPES VALUES (160,'Plotly.js');
 INSERT INTO ART_REPORT_TYPES VALUES (161,'View');
+INSERT INTO ART_REPORT_TYPES VALUES (162,'File');
 INSERT INTO ART_REPORT_TYPES VALUES (-1,'Chart: XY');
 INSERT INTO ART_REPORT_TYPES VALUES (-2,'Chart: Pie 3D');
 INSERT INTO ART_REPORT_TYPES VALUES (-3,'Chart: Horizontal Bar 3D');
