@@ -1,0 +1,46 @@
+/*
+ * ART. A Reporting Tool.
+ * Copyright (C) 2019 Enrico Liboni <eliboni@users.sf.net>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program. If not, see <http://www.gnu.org/licenses/>.
+ */
+package art.reportoptions;
+
+import java.io.Serializable;
+
+/**
+ * Represents options for file report type
+ * 
+ * @author Timothy Anyona
+ */
+public class FileOptions implements Serializable {
+	
+	private static final long serialVersionUID = 1L;
+	private String extension="txt";
+
+	/**
+	 * @return the extension
+	 */
+	public String getExtension() {
+		return extension;
+	}
+
+	/**
+	 * @param extension the extension to set
+	 */
+	public void setExtension(String extension) {
+		this.extension = extension;
+	}
+	
+}
