@@ -988,6 +988,7 @@ INSERT INTO ART_REPORT_TYPES VALUES(158,'ReportEngine')
 INSERT INTO ART_REPORT_TYPES VALUES(159,'ReportEngine: File')
 INSERT INTO ART_REPORT_TYPES VALUES(160,'Plotly.js')
 INSERT INTO ART_REPORT_TYPES VALUES(161,'View')
+INSERT INTO ART_REPORT_TYPES VALUES(162,'File')
 INSERT INTO ART_ACCESS_LEVELS VALUES(0,'Normal User')
 INSERT INTO ART_ACCESS_LEVELS VALUES(5,'Schedule User')
 INSERT INTO ART_ACCESS_LEVELS VALUES(10,'Junior Admin')
