@@ -730,6 +730,8 @@ reports.format.c3                           = Browser (C3 Chart)
 reports.format.csv                          = File (csv)
 reports.format.csvZip                       = File (zip csv)
 reports.format.docx                         = Document (docx)
+reports.format.file                         = File
+reports.format.fileZip                      = File (zip)
 reports.format.html                         = Browser
 reports.format.htmlDataTable                = Browser (DataTable)
 reports.format.htmlFancy                    = Browser (Fancy)
