@@ -1048,4 +1048,3 @@ users.message.userUpdated             = Utilisateur mis \u00e0 jour
 users.text.fullName                   = Nom complet
 users.text.updated                    = Mis \u00e0 jour
 users.text.username                   = Nom d'utilisateur
-
