@@ -1048,4 +1048,3 @@ users.message.userUpdated             = Naudotojas pakeistas
 users.text.fullName                   = Pilnas pavadinimas
 users.text.updated                    = Pakeistas
 users.text.username                   = Naudotojo vardas
-
