@@ -1048,4 +1048,3 @@ users.message.userUpdated             = Usu\u00e1rio atualizado
 users.text.fullName                   = Nome completo
 users.text.updated                    = Atualizado
 users.text.username                   = Nome de "login"
-
