@@ -730,6 +730,8 @@ reports.format.c3                           = Kivinjari (Chati C3)
 reports.format.csv                          = Faili (csv)
 reports.format.csvZip                       = Faili (zip csv)
 reports.format.docx                         = Andiko (docx)
+reports.format.file                         = Faili
+reports.format.fileZip                      = Faili (zip)
 reports.format.html                         = Kivinjari
 reports.format.htmlDataTable                = Kivinjari (DataTable)
 reports.format.htmlFancy                    = Kivinjari (Fancy)
@@ -1048,4 +1050,3 @@ users.message.userUpdated             = Mtumiaji amesasishwa
 users.text.fullName                   = Jina Kamili
 users.text.updated                    = Amesasishwa
 users.text.username                   = Jina la mtumiaji
-
