@@ -1048,4 +1048,3 @@ users.message.userUpdated             = \u7528\u6237 \u5df2\u66f4\u65b0
 users.text.fullName                   = \u5168\u540d
 users.text.updated                    = \u5df2\u66f4\u65b0
 users.text.username                   = \u5e10\u53f7
-
